--- a/mobile-first-demo/styles/style.css
+++ b/mobile-first-demo/styles/style.css
@@ -84,17 +84,29 @@ position: relative;
    top: -5px;
 }
 
-.intro-2{
+.facts-and-numbers{
    width: 90%;
    margin: 80px auto 0 auto;
    position: relative;
+   color: pink;
 }
 
-.intro2-title{ 
+.facts-and-numbers h2{ 
    font-weight: 700;
    font-size: 19px;
    text-align: center;
    margin: auto 90px auto 90px;
+   color: purple;
+}
+
+.facts-and-numbers ul{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   list-style-type: none;
+   padding: 0;
+   gap: 0.5em;
+   color: red;
 }
 
 .middle{
