--- a/mobile-first-demo/styles/style.css
+++ b/mobile-first-demo/styles/style.css
@@ -106,7 +106,15 @@ position: relative;
    list-style-type: none;
    padding: 0;
    gap: 0.5em;
-   color: red;
+}
+
+.facts-and-numbers li{
+   background-color: black;
+   width: fit-content;
+   padding: 5px 12px;
+   border-radius: 50px;
+   font-size: 18px;
+   line-height: 30px;
 }
 
 .middle{
