--- a/mobile-first-demo/styles/style.css
+++ b/mobile-first-demo/styles/style.css
@@ -153,7 +153,7 @@ span{
    padding-right: 13px;
    padding-left: 20px;
    padding-top: 20px;
-   padding-bottom: 20px;
+   padding-bottom: 60px;
    font-weight: 400;
    font-size: 15px;
    line-height: 25px;
@@ -162,6 +162,9 @@ span{
 }
 
 .button1 {
+   position: relative;
+   top: -55px;
+   margin: auto 13px auto 20px;
    background: #0000FF;
    border-radius: 5px;     
    font-weight: 400;
@@ -169,9 +172,56 @@ span{
    line-height: 20px;
    width: 300px;
    height: 34px;
+   border: none;
  }
  
- .button1 p{
+.button1 p{
     color: #FFFFFF;
-    /* padding: 7px 7px 7px 7px; */
      }
+
+.jasper{
+      width: 90%;
+      margin: 50px auto 0 auto;
+      position: relative;
+   }
+
+.img-3{
+   border-radius: 50%;
+   width: 50%;
+   margin-left: 25%;
+}
+
+.jasper-title{
+   font-weight: 700;
+   font-size: 15px;
+   line-height: 30px;
+   margin-top: 18px;
+   color: var(--text-color);
+}
+
+.jasper-text{
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 30px;
+   color: #222222;
+}
+
+.button2 {
+   margin: 5px 13px auto auto;
+   background: #0000FF;
+   border-radius: 5px;     
+   font-weight: 400;
+   font-size: 12px;
+   height: 25px;
+   border: none;
+}
+
+.button2 p{
+   color: #FFFFFF;
+   padding: 2px 2px 2px 2px;
+   font-weight: 700;
+}
+
+
+
