--- a/mobile-first-demo/styles/style.css
+++ b/mobile-first-demo/styles/style.css
@@ -186,10 +186,17 @@ span{
       position: relative;
    }
 
-.img-3{
+.img-wrapper{
+   width: 200px;
+   height: 200px;
+   overflow: hidden;
    border-radius: 50%;
-   width: 50%;
-   margin-left: 25%;
+   margin: 25%;
+   }
+
+.img-3{
+   height: 280px;
+   width: 200px;
 }
 
 .jasper-title{
@@ -327,6 +334,9 @@ span{
    width: 90%;
    margin: 80px auto 0 auto;
    position: relative;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
 }  
 
 .pictures-column h2{
@@ -339,15 +349,11 @@ text-align: center;
 .pictures-column img{
    padding: 0;
    max-width: 442px;
-   width: 100%;
    flex-wrap: wrap;
 }
 
 .images{
    width: 50%;
-   display: flex;
-   flex: 50%;
-   float:auto;
 }
 
 
