--- a/mobile-first-demo/styles/style.css
+++ b/mobile-first-demo/styles/style.css
@@ -174,6 +174,12 @@ span{
    width: 300px;
    height: 34px;
    border: none;
+   transition: .6s;
+ }
+
+ .button1:hover{
+   transform: scale(1.09);
+   transition: .6s;
  }
  
 .button1 p{
@@ -192,6 +198,8 @@ span{
    overflow: hidden;
    border-radius: 50%;
    margin: 25%;
+   margin-top: 20px;
+   margin-bottom: 30px;
    }
 
 .img-3{
@@ -203,7 +211,7 @@ span{
    font-weight: 700;
    font-size: 15px;
    line-height: 30px;
-   margin-top: 18px;
+   margin-top: 0px;
    color: var(--text-color);
 }
 
@@ -223,6 +231,12 @@ span{
    font-size: 12px;
    height: 25px;
    border: none;
+   transition: .6s;
+}
+
+.button2:hover{
+   transform: scale(1.09);
+   transition: .6s;
 }
 
 .button2 p{
@@ -343,7 +357,7 @@ span{
 font-weight: 700;
 font-size: 21px;
 line-height: 29px;
-text-align: center;
+align-items: center;
 }
 
 .pictures-column img{
@@ -354,6 +368,17 @@ text-align: center;
 
 .images{
    width: 50%;
+}
+
+.form-yellow{
+   width: 90%;
+   margin: 80px auto 0 auto;
+   position: relative;
+}
+.form-yellow h2{
+   font-weight: 700;
+   font-size: 39px;
+   line-height: 44px;
 }
 
 
