--- a/mobile-first-demo/styles/style.css
+++ b/mobile-first-demo/styles/style.css
@@ -478,7 +478,7 @@ label[for="lname"], label[for="fname"]{
    border-left: 1px solid #888888;
 }
 
-/* @media only screen and (min-width: 1280px){
+@media only screen and (min-width: 1280px){ 
 
 main{
    max-width: 1280px;
@@ -555,5 +555,3 @@ header h1{
       background-color: #FFFFFF;
       padding: 50px 54px 51px 383px;
    } */
-
-
